stylesheets/_component.navigation.scss
/* ... */
.nav-items {
    margin: 0;
    padding: 0;
}

.nav-item {
    list-style-type: none;
    font-family: $font-family-regular;
}

.nav-divider {
    border-color: darken($nav-color-dark, 6);
    margin: 5px 0;
}

.nav-link {
    color: color(white);
    text-decoration: none;
}

.nav-primary {
    background-color: $nav-color-light;
    background: $background-gradient;
    background-attachment: fixed;
    box-shadow: inset (-$shadow-micro) 0 0 rgba(0, 0, 0, .2);
    overflow-y: hidden;
    text-align: center;
    transition: box-shadow 100ms linear;
    width: $nav-primary-width;
    z-index: $zindex-nav;

    @include respond-min($screen-desktop) {
        position: fixed;
    }

    .is-active {
        background-color: rgba(255, 255, 255, .2);
    }

    .nav-link {
        background-color: transparent;
        border: 0;
        color: color(white);
        display: block;
        font-family: $font-family-regular;
        font-size: .75em;
        line-height: 1em;
        max-width: $nav-primary-width;
        min-height: 72px; // This is the optimal height for normal nav links with icon and one line text
        min-width: $nav-primary-width;
        padding: 16px 5px;
        position: relative;
        text-overflow: ellipsis;
        transition: background-color 50ms linear, color 50ms linear, box-shadow 50ms linear, outline 50ms linear;

        &:hover {
            background-color: rgba(255, 255, 255, .2);
            color: color(white);
        }

        &:focus {
            @include pulsar-link-focused;

            .nav-link__icon {
                color: color(black);
            }
        }
    }

    .nav-link__icon {
        color: color(white);
        display: block;
        font-size: 1.7em;
        margin-bottom: 7px;
        width: 100%;
    }

    .nav-link__image {
        height: 18px;
        margin-bottom: 7px;
        width: 18px;
    }

    .nav-link__label {
        display: block;
        width: 100%;
        word-wrap: break-word;
    }

    .nav-items,
    .jadu-branding {
        -webkit-transform-origin: 50% 0%;
        -webkit-transform: translate3d(70%, 0, 0) scale3d(.9, .9, .9);
        -webkit-transition-delay: ease, 0s;
        -webkit-transition: opacity 300ms 100ms, -webkit-transform 500ms ease;
        transform-origin: 50% 0%;
        transform: translate3d(70%, 0, 0) scale3d(.9, .9, .9);
        transition: transform 500ms ease;

        @include prefers-reduced-motion() {
            transition: none;
            transform: none;
        }

        @include respond-min($screen-desktop) {
            -webkit-transform: none;
            transform: none;
            transition: all 0s ease 0s;
            -webkit-transition: all 0s ease 0s;
        }

        .open-nav & {
            -webkit-transform: translate3d(0, 0, 0);
            transform: translate3d(0, 0, 0);
        }
    }
}

.nav-secondary,
.nav-tertiary,
.nav-quaternary {
    background-color: $nav-color-dark;
    background: $background-gradient;
    background-attachment: fixed;
    box-shadow: $shadow-large 0 0 color(background, shadow);
    left: $nav-primary-width;
    margin-left: -320px;
    overflow-x: hidden;
    overflow-y: auto;
    position: absolute;
    top: 0;
    transition: margin-left 100ms ease-in-out;
    width: 245px;
    z-index: $zindex-nav-secondary;

    @include respond-min($screen-desktop) {
        position: fixed;
    }

    @include prefers-reduced-motion() {
        transition: none;
    }

    // cope with presence of scrollbars in IE
    @include ie-lte(10) {
        width: 280px;
    }

    .nav-container {
        display: none;
    }

    .nav-container.is-active {
        display: block;
        margin: 0 20px;
    }

    .nav-link {
        background-color: transparent;
        border: 0;
        text-align: left;

        &:hover {
            background-color: rgba(255, 255, 255, .2);
            color: color(white);
        }

        &:focus {
            @include pulsar-link-focused;
            position: relative;
            z-index: $zindex-nav-secondary + 1;
        }

        &:active {
            background-color: color(white);
            box-shadow: none;
            color: $nav-color-dark;
            outline: none;
        }
    }
}

.nav-tertiary {
    @include ie-lte(9) {
        box-sizing: content-box;
    }

    .nav-link {
        span {
            margin-left: 10px;
        }
    }
}

.nav-quaternary {
    background-color: $nav-color-darker;
    left: $nav-primary-width + 3px; // Extra 3px for smooth overlapping style
    margin-left: 242px;
    transition: all 100ms linear;
    width: 0;

    @include prefers-reduced-motion() {
        transition: none;
    }
}

.nav-remove-search {
    color: color(white);
    display: inline-block;
    margin-top: 6px;
    opacity: 0;
    text-decoration: none;
    transition: opacity 50ms linear;
    vertical-align: top;

    &:hover {
        color: color(white);
    }
}

.nav-secondary.is-open,
.nav-tertiary.is-open,
.nav-quaternary.is-open {
    margin-left: 0;
}

.nav-quaternary.is-open {
    width: 242px;

    @include ie-lte(9) {
        box-sizing: content-box;
        width: 277px;
    }
}

.jadu-branding {
    background-color: rgba(0, 0, 0, .3);
    border-bottom: 3px solid color(white);
    display: block;
    padding: 0;
    text-decoration: none;

    &.is-active {
        background: none;
    }

    &:focus .jadu-logomark {
        background: url($branding-navigation-focus), linear-gradient(transparent, transparent);
    }
}

.nav-search {
    display: none;

    @include respond-min($screen-tablet) {
        clear: right;
        display: block;
        margin-left: 20px;
        margin-top: 19px;
        position: relative;
    }
}
/* ... */

